tests/typing/errors/reserved/dot.smt2
(set-logic ALL)
(declare-fun |.bar| () Bool)
(check-sat)
